<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplicationevent.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailEventFragment"
            app:destination="@id/navigation_detail_event" />
    </fragment>

    <fragment
        android:id="@+id/navigation_finished_event"
        android:name="com.example.myapplicationevent.ui.finished.FinishedEventFragment"
        android:label="@string/finished_event"
        tools:layout="@layout/fragment_finished_event" >
        <action
            android:id="@+id/action_navigation_finished_event_to_detailEventFragment"
            app:destination="@id/navigation_detail_event" />
    </fragment>

    <fragment
        android:id="@+id/navigation_upcoming_event"
        android:name="com.example.myapplicationevent.ui.upcoming.UpcomingEventFragment"
        android:label="@string/active_event"

        tools:layout="@layout/fragment_upcoming_event" >
        <action
            android:id="@+id/action_navigation_upcoming_event_to_detailEventFragment"
            app:destination="@id/navigation_detail_event" />
    </fragment>
    <fragment
        android:id="@+id/navigation_detail_event"
        android:name="com.example.myapplicationevent.ui.detailevent.DetailEventFragment"
        android:label="@string/event_details"

        tools:layout="@layout/fragment_detail_event" >
        <argument
            android:name="eventId"
            app:argType="string"
            android:defaultValue="0" />
    </fragment>
    <fragment
        android:id="@+id/navigation_favorite_event"
        android:name="com.example.myapplicationevent.ui.favorite.FavoriteFragment"
        android:label="@string/favorite_event"

        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_favoriteFragment_to_navigation_detail_event"
            app:destination="@id/navigation_detail_event" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.myapplicationevent.ui.setting.SettingFragment"
        android:label="@string/settings"
        tools:layout="@xml/preferences" />
</navigation>